--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,111 +1,59 @@
 .main {
   display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  z-index: 1;
+  margin-bottom: 450px;
+  width: 100vw;
+  gap: 20px;
+}
+
+.project-one-container {
+  display: flex;
+  align-items: flex-start;
+  gap: 10px;
+  margin-right: -15px;
+}
+
+.project-one-image {
+  height: 35vw;
+  width: auto;
+}
+
+.project-one-caption {
+  margin-top: -10px;
+  transform-origin: 0%;
+  transform: rotate(90deg);
+}
+
+.project-two-container {
+  display: flex;
   flex-direction: column;
-  justify-content: space-between;
-  align-items: center;
 }
 
-.description {
-  display: inherit;
-  justify-content: inherit;
-  align-items: inherit;
-  font-size: 0.85rem;
-  max-width: var(--max-width);
-  width: 100%;
-  z-index: 2;
-  font-family: var(--font-mono);
+.project-two-image {
+  height: 35vw;
+  width: auto;
 }
 
-.description a {
+.project-two-caption {
+  margin-left: 0;
+}
+
+.project-three-container {
   display: flex;
-  justify-content: center;
-  align-items: center;
-  gap: 0.5rem;
+  flex-direction: column;
 }
 
-.description p {
-  position: relative;
-  margin: 0;
-  padding: 1rem;
-  background-color: rgba(var(--callout-rgb), 0.5);
-  border: 1px solid rgba(var(--callout-border-rgb), 0.3);
-  border-radius: var(--border-radius);
+.project-three-image {
+  width: 50vw;
+  height: auto;
 }
 
-.code {
-  font-weight: 700;
-  font-family: var(--font-mono);
+.project-three-caption {
+  margin-top: 0;
 }
 
-.grid {
-  display: grid;
-  grid-template-columns: repeat(4, minmax(25%, auto));
-  max-width: 100%;
-  width: var(--max-width);
-}
-
-.card {
-  padding: 1rem 1.2rem;
-  border-radius: var(--border-radius);
-  background: rgba(var(--card-rgb), 0);
-  border: 1px solid rgba(var(--card-border-rgb), 0);
-  transition: background 200ms, border 200ms;
-}
-
-.card span {
-  display: inline-block;
-  transition: transform 200ms;
-}
-
-.card h2 {
-  font-weight: 600;
-  margin-bottom: 0.7rem;
-}
-
-.card p {
-  margin: 0;
-  opacity: 0.6;
-  font-size: 0.9rem;
-  line-height: 1.5;
-  max-width: 30ch;
-  text-wrap: balance;
-}
-
-.center {
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  position: relative;
-  padding: 4rem 0;
-}
-
-.center::before {
-  background: var(--secondary-glow);
-  border-radius: 50%;
-  width: 480px;
-  height: 360px;
-  margin-left: -400px;
-}
-
-.center::after {
-  background: var(--primary-glow);
-  width: 240px;
-  height: 180px;
-  z-index: -1;
-}
-
-.center::before,
-.center::after {
-  content: "";
-  left: 50%;
-  position: absolute;
-  filter: blur(45px);
-  transform: translateZ(0);
-}
-
-.logo {
-  position: relative;
-}
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
