--- a/src/Components/footer.module.css
+++ b/src/Components/footer.module.css
@@ -1,14 +1,33 @@
-.footer-container {
-  display: flex;
-	flex-direction: column;
-	justify-content: center;
+.footer-home-container {
+  display: fixed;
+	position: fixed;
+	left: 0;
+	bottom: 0;
 	width: 100vw;
-  margin-left: 5vw;
+  margin-left: 6vw;
+	filter: blur(8px);
+  -webkit-filter: blur(8px);
+  transition: filter 0.3s;
+	z-index: -1;
+}
+
+.unblurred {
+	filter: none;
+  -webkit-filter: none;
+}
+
+.footer-container {
+	display: fixed;
+	left: 0;
+	bottom: 0;
+	width: 100vw;
+  margin-left: 6vw;
+	z-index: 1;
 }
 
 .footer-info {
   display: flex;
-	margin-bottom: 8vw;
+	margin-bottom: 6vw;
 }
 
 .hours-address-container {
@@ -18,13 +37,19 @@
 }
 
 .hours-address {
-	font-size: .9rem;
+	font-size: 14px;
 	margin-bottom: -15px;
 }
 
 .purpose-container {
-	width: 35vw;
-	font-size: 1rem;
+	width: 45vw;
+	font-size: 16px;
+}
+
+.footer-logo-container {
+	display: flex;
+	justify-content: center;
+	margin-left: -8vw;
 }
 
 .logo-large {
@@ -37,7 +62,7 @@
 	width: 90vw;
 	justify-content: space-between;
 	margin-top: 20px;
-	margin-bottom: 0px;
+	margin-bottom: 20px;
 }
 
 .footer-link {
