--- a/src/Components/header.module.css
+++ b/src/Components/header.module.css
@@ -1,9 +1,11 @@
 .main {
   display: flex;
   justify-content: center;
-  margin: 0;
+  margin: 0 0 10px;
 }
 
 .logo {
-  margin-top: 0px;
+  width: 14rem;
+  height: auto;
+  margin-top: .9rem;
 }
