--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,23 +1,24 @@
 .main {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: center;
   z-index: 1;
-  margin-bottom: 450px;
+  margin-bottom: 1000px;
   width: 100vw;
-  gap: 20px;
+  display: grid;
+  grid-template-columns: repeat(20, 100px);
+  grid-template-rows: repeat(20, 100px);
+  margin-left: 4rem;
 }
 
 .project-one-container {
   display: flex;
   align-items: flex-start;
   gap: 10px;
-  margin-right: -15px;
   cursor: pointer;
+  grid-column: 1 / 3;
+  grid-row: 1 /3;
 }
 
 .project-one-image {
-  height: 35vw;
+  height: 35rem;
   width: auto;
 }
 
@@ -25,36 +26,97 @@
   margin-top: -10px;
   transform-origin: 0%;
   transform: rotate(90deg);
+  width: 150px;
 }
 
-.project-two-container {
+.project-two-container { 
   display: flex;
   flex-direction: column;
+  grid-column: 7 / 10;
+  grid-row: 1 / 4;
+  cursor: pointer;
+  margin-bottom: 1rem;
 }
 
 .project-two-image {
-  height: 35vw;
-  width: auto;
+  height: auto;
+  width: 38rem;
 }
 
 .project-two-caption {
-  margin-left: 0;
+  margin: 0;
 }
 
 .project-three-container {
   display: flex;
   flex-direction: column;
+  grid-column: 1 / 3;
+  grid-row: 7 / 10;
+  cursor: pointer;
 }
 
 .project-three-image {
-  width: 50vw;
+  width: 33rem;
   height: auto;
 }
 
 .project-three-caption {
-  margin-top: 0;
+  margin: 0;
 }
 
+.project-four-container {
+  display: flex;
+  flex-direction: column;
+  grid-column: 8 / 14;
+  grid-row:  9;
+  cursor: pointer;
+  margin-top: 60px;
+}
+
+.project-four-image {
+  width: 30rem;
+  height: auto;
+}
+
+.project-four-caption {
+  margin: 0;
+}
+
+.project-five-container {
+  display: flex;
+  flex-direction: column;
+  grid-column: 1 / 4;
+  grid-row: 17 / 20;
+  cursor: pointer;
+  align-self: center;
+}
+
+.project-five-image {
+  width: 36rem;
+  height: auto;
+}
+
+.project-five-caption {
+  margin: 0;
+}
+
+.project-six-container {
+  display: flex;
+  flex-direction: column;
+  grid-column: 8 / 14;
+  grid-row: 16 / 20;
+  align-self:first baseline;
+  cursor: pointer;
+}
+
+.project-six-image {
+  width: 28rem;
+  height: auto;
+}
+
+.project-six-caption {
+  margin-bottom: 0;
+}
 /* Enable hover only on non-touch devices */
 @media (hover: hover) and (pointer: fine) {
   .card:hover {
