--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -1,11 +1,11 @@
 .main {
   z-index: 1;
   margin-bottom: 1000px;
-  width: 100vw;
+  margin-left: 3rem;
   display: grid;
-  grid-template-columns: repeat(20, 100px);
+  grid-template-columns: repeat(3, 130px) 15px 15px repeat(3, 130px);
   grid-template-rows: repeat(20, 100px);
-  margin-left: 4rem;
+  justify-content: center;
 }
 
 .project-one-container {
@@ -32,7 +32,7 @@
 .project-two-container { 
   display: flex;
   flex-direction: column;
-  grid-column: 7 / 10;
+  grid-column: 8 / 12;
   grid-row: 1 / 4;
   cursor: pointer;
   margin-bottom: 1rem;
@@ -50,7 +50,7 @@
 .project-three-container {
   display: flex;
   flex-direction: column;
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   grid-row: 7 / 10;
   cursor: pointer;
 }
