--- a/src/app/information/information.module.css
+++ b/src/app/information/information.module.css
@@ -4,21 +4,63 @@
 
 .shop-info-container {
   display: grid;
-  grid-template-columns: minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr) 15px 15px minmax(200px, 1fr) minmax(200px, 1fr) minmax(200px, 1fr);
+  grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) 15px 15px minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  grid-template-rows: repeat(2, 121px);
 }
 
 .operating-container {
+  justify-self: start;
   grid-column: 1;
+  grid-row: 2;
 }
 
 .address-container {
   grid-column: 2;
+  grid-row: 2;
 }
 
 .ethos-container {
-  grid-column: 4 / 9;
+  grid-column: 7 / 10;
+  grid-row: 2;
 }
 
 .info-text {
-  margin-bottom: -1rem;
+  margin: 0;
+}
+
+.images-container {
+  display: grid;
+  grid-template-columns: repeat(auto-fill, minmax(0px, 180px));
+  grid-template-rows: repeat(auto-fit, minmax(121px, 121px));
+}
+
+.map-container {
+  grid-column: 1 / 2;
+  grid-row: 1 / 3;
+}
+
+.map-image {
+  height: 15rem;
+  width: auto;
+}
+
+.floor-plan-container {
+  grid-column: 3;
+}
+
+.floor-plan-image {
+  height: 15.4rem;
+  width: auto;
+  margin-top: -2px;
+}
+
+.backdrop-container {
+  margin-top: 1rem;
+  grid-column: 1 / 4;
+  grid-row: 3
+}
+
+.backdrop-image {
+  width: 38rem;
+  height: auto;
 }
