--- a/src/app/information/information.module.css
+++ b/src/app/information/information.module.css
@@ -4,8 +4,11 @@
 
 .shop-info-container {
   display: grid;
-  grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) 15px 15px minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  grid-template-columns: minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) 15px 15px minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr);
   grid-template-rows: repeat(2, 121px);
+  @media (width > 1440px){
+    grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) 15px 15px minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  }
 }
 
 .operating-container {
@@ -30,8 +33,11 @@
 
 .images-residents-container {
   display: grid;
-  grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) 15px 15px minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  grid-template-columns: minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) 15px 15px minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr) minmax(176px, 1fr);
   grid-template-rows: repeat(auto-fill, minmax(121px, 121px));
+  @media (width > 1440px) {
+    grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) 15px 15px minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  }
 }
 
 .map-container {
@@ -86,5 +92,25 @@
 
 .resident-container-2 {
   grid-column: 8;
+  grid-row: 2;
+}
+
+.equipment-container {
+  grid-column: 7;
+  grid-row: 3;
+  display: grid;
+  grid-template-columns: minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr) minmax(216px, 1fr);
+  grid-template-rows: repeat(auto-fill, minmax(121px, 121px));
+}
+
+.equipment-title {
+  grid-column: 1;
+  grid-row: 2;
+  font-weight: bolder;
+}
+
+.equipment-list {
+  margin-top: 1.5rem;
+  grid-column: 1;
   grid-row: 2;
 }
