--- a/src/app/page.module.css
+++ b/src/app/page.module.css
@@ -3,9 +3,12 @@
   margin-bottom: 1000px;
   margin-left: 3rem;
   display: grid;
-  grid-template-columns: repeat(3, 130px) 15px 15px repeat(3, 130px);
+  grid-template-columns: repeat(4, 130px) 15px 15px repeat(4, 130px);
   grid-template-rows: repeat(20, 100px);
   justify-content: center;
+  @media (width > 1440px){
+    grid-template-columns: repeat(4, 180px) 15px 15px repeat(4, 180px);
+  }
 }
 
 .project-one-container {
@@ -13,7 +16,7 @@
   align-items: flex-start;
   gap: 10px;
   cursor: pointer;
-  grid-column: 1 / 3;
+  grid-column: 1 / 4;
   grid-row: 1 /3;
 }
 
@@ -32,7 +35,7 @@
 .project-two-container { 
   display: flex;
   flex-direction: column;
-  grid-column: 8 / 12;
+  grid-column: 7 / 9;
   grid-row: 1 / 4;
   cursor: pointer;
   margin-bottom: 1rem;
@@ -70,7 +73,7 @@
   grid-column: 8 / 14;
   grid-row:  9;
   cursor: pointer;
-  margin-top: 60px;
+  margin-top: 40px;
 }
 
 .project-four-image {
