--- a/src/app/projects/[projectName]/project.module.css
+++ b/src/app/projects/[projectName]/project.module.css
@@ -6,8 +6,11 @@
   margin-top: 4rem;
   display: grid;
   grid-template-columns: repeat(4, 130px) 15px 15px repeat(4, 130px);
-  grid-template-rows: repeat(18, 120px);
+  grid-template-rows: repeat(auto-fit, minmax(220px, 1fr));
   justify-content: center;
+  @media (width > 1440px){
+    grid-template-columns: repeat(4, 180px) 15px 15px repeat(4, 180px);
+  }
 }
 
 .project-info-container {
@@ -15,7 +18,6 @@
   flex-direction: column;
   grid-column: 1 / 4;
   grid-row: 1 / 4;
-  margin-bottom: 100px;
 }
 
 .project-title {
@@ -44,13 +46,15 @@
   height: auto;
   grid-column: 7 / 10;
   grid-row: 1 / 4;
+  margin-bottom: 30px;
 }
 
 .project-image-2 {
   width: 450px;
   height: auto;
   grid-column: 1 / 4;
-  grid-row: 5 / 8;
+  grid-row: 4 / 8;
+  margin-top: -150px;
 }
 
 .project-image-3 {
@@ -65,20 +69,26 @@
   height: auto;
   grid-column: 1 / 4;
   grid-row: 10;
+  margin-top: -275px;
 }
 
 .project-image-5 {
   width: 260px;
   height: auto;
-  grid-column: 3 / 4;
-  grid-row: 16;
+  grid-column: 1 / 2;
+  grid-row: 12;
+  margin-top: 40px;
 }
 
 .project-image-6 {
   width: 260px;
   height: auto;
-  grid-column: 1 / 2;
-  grid-row: 16;
+  grid-column: 3 / 4;
+  grid-row: 12;
+  margin-top: 40px;
+  @media (width > 1440px){
+    margin-left: -98px;
+  }
 }
 
 .project-image-7 {
@@ -86,14 +96,13 @@
   height: auto;
   grid-column: 7 / 10;
   grid-row: 12;
-  margin-top: 85px;
+  margin-top: -350px;
 }
 
 .buttons-container {
   display: flex;
   justify-content: space-between;
-  margin-bottom: 125px;
-  margin-left: 4rem;
+  margin: 5rem 3.5vw 5rem 5.5vw;
 }
 
 .pagination-button {
