--- a/src/Components/footer.module.css
+++ b/src/Components/footer.module.css
@@ -3,7 +3,7 @@
   position: fixed;
 	left: 0;
 	bottom: 0;
-  margin-bottom: 200px;
+  margin-bottom: 18rem;
 	width: 100vw;
   margin-left: 6vw;
 	filter: blur(8px);
@@ -41,13 +41,12 @@
 }
 
 .hours-address {
-	font-size: 14px;
+	font-size: .9rem;
 	margin-bottom: -15px;
 }
 
 .purpose-container {
 	width: 45vw;
-	font-size: 16px;
 }
 
 .footer-logo-container {
@@ -65,8 +64,7 @@
 	display: flex;
 	width: 90vw;
 	justify-content: space-between;
-	margin-top: 20px;
-	margin-bottom: 20px;
+	margin: 2rem 0;
 }
 
 .footer-link {
