--- a/src/app/projects/[projectName]/project.module.css
+++ b/src/app/projects/[projectName]/project.module.css
@@ -18,6 +18,7 @@
   flex-direction: column;
   grid-column: 1 / 4;
   grid-row: 1 / 4;
+  
 }
 
 .project-title {
@@ -49,12 +50,26 @@
   margin-bottom: 30px;
 }
 
+.project-landscape-image-1 {
+  width: 650px;
+  height: auto;
+  grid-column: 7 / 10;
+  grid-row: 1 / 4;
+}
+
 .project-image-2 {
   width: 450px;
   height: auto;
   grid-column: 1 / 4;
   grid-row: 4 / 8;
-  margin-top: -100px;
+  margin-top: -150px;
+}
+
+.project-landscape-image-2 {
+  width: 500px;
+  height: auto;
+  grid-column: 1 / 4;
+  grid-row: 4 / 8;
 }
 
 .project-image-3 {
@@ -62,6 +77,13 @@
   height: auto;
   grid-column: 7 / 10;
   grid-row: 6;
+}
+
+.project-landscape-image-3 {
+  width: 600px;
+  height: auto;
+  grid-column: 7 / 10;
+  grid-row: 5;
 }
 
 .project-image-4 {
@@ -72,12 +94,31 @@
   margin-top: -275px;
 }
 
+.project-landscape-image-4 {
+  width: 650px;
+  height: auto;
+  grid-column: 3;
+  grid-row: 10;
+  margin-top: 35px;
+}
+
 .project-image-5 {
   width: 260px;
   height: auto;
   grid-column: 1 / 2;
   grid-row: 12;
   margin-top: 40px;
+  @media (width > 1440px){
+    margin-left: -98px;
+  }
+}
+
+.project-landscape-image-5 {
+  width: 500px;
+  height: auto;
+  grid-column: 1;
+  grid-row: 11;
+  margin-top: 35px;
 }
 
 .project-image-6 {
@@ -89,6 +130,14 @@
   @media (width > 1440px){
     margin-left: -98px;
   }
+}
+
+.project-landscape-image-6 {
+  width: 500px;
+  height: auto;
+  grid-column: 7;
+  grid-row: 11;
+  margin-top: 35px;
 }
 
 .project-image-7 {
