--- a/src/app/projects/[projectName]/project.module.css
+++ b/src/app/projects/[projectName]/project.module.css
@@ -1,13 +1,16 @@
 .project-main {
-  /* display: flex; */
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
 }
 
 .project-container {
   margin-top: 4rem;
   display: grid;
   grid-template-columns: repeat(4, 130px) 15px 15px repeat(4, 130px);
-  grid-template-rows: repeat(auto-fit, minmax(220px, 1fr));
+  grid-template-rows: auto;
   justify-content: center;
+  row-gap: 15px;
   @media (width > 1440px){
     grid-template-columns: repeat(4, 180px) 15px 15px repeat(4, 180px);
   }
@@ -17,8 +20,6 @@
   display: flex;
   flex-direction: column;
   grid-column: 1 / 4;
-  grid-row: 1 / 4;
-  
 }
 
 .project-title {
@@ -46,106 +47,86 @@
   width: 450px;
   height: auto;
   grid-column: 7 / 10;
-  grid-row: 1 / 4;
-  margin-bottom: 30px;
 }
 
 .project-landscape-image-1 {
   width: 650px;
   height: auto;
   grid-column: 7 / 10;
-  grid-row: 1 / 4;
 }
 
 .project-image-2 {
   width: 450px;
   height: auto;
   grid-column: 1 / 4;
-  grid-row: 4 / 8;
-  margin-top: -150px;
+  margin-top: -5rem;
 }
 
 .project-landscape-image-2 {
-  width: 500px;
+  width: 600px;
   height: auto;
-  grid-column: 1 / 4;
-  grid-row: 4 / 8;
+  grid-column: 1;
+  margin-top: -8rem;
 }
 
 .project-image-3 {
   width: 575px;
   height: auto;
-  grid-column: 7 / 10;
-  grid-row: 6;
+  grid-column: 7;
 }
 
 .project-landscape-image-3 {
   width: 600px;
   height: auto;
-  grid-column: 7 / 10;
-  grid-row: 5;
+  grid-column: 8;
 }
 
 .project-image-4 {
   width: 520px;
   height: auto;
-  grid-column: 1 / 4;
-  grid-row: 10;
-  margin-top: -275px;
+  grid-column: 1;
+  margin-top: -10rem;
 }
 
 .project-landscape-image-4 {
-  width: 650px;
+  width: 550px;
   height: auto;
-  grid-column: 3;
-  grid-row: 10;
-  margin-top: 35px;
+  grid-column: 1;
+  margin-top: -7rem;
 }
 
 .project-image-5 {
-  width: 260px;
+  width: 500px;
   height: auto;
-  grid-column: 1 / 2;
-  grid-row: 12;
-  margin-top: 40px;
-  @media (width > 1440px){
-    margin-left: -98px;
-  }
+  grid-column: 7;
 }
 
 .project-landscape-image-5 {
   width: 500px;
   height: auto;
-  grid-column: 1;
-  grid-row: 11;
-  margin-top: 35px;
+  grid-column: 8;
 }
 
 .project-image-6 {
-  width: 260px;
+  width: 525px;
   height: auto;
-  grid-column: 3 / 4;
-  grid-row: 12;
-  margin-top: 40px;
-  @media (width > 1440px){
-    margin-left: -98px;
-  }
+  grid-column: 1;
+  margin-top: -8rem;
 }
 
 .project-landscape-image-6 {
   width: 500px;
   height: auto;
   grid-column: 7;
-  grid-row: 11;
+  /* grid-row: 5; */
   margin-top: 35px;
 }
 
 .project-image-7 {
-  width: 575px;
+  width: 500px;
   height: auto;
-  grid-column: 7 / 10;
-  grid-row: 12;
-  margin-top: -350px;
+  grid-column: 8;
+  /* grid-row: 5; */
 }
 
 .buttons-container {
